# zotero-mcp

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/zotero_mcp/: _app.py  chroma_client.py  cli.py  client.py  local_db.py  pdf_utils.py  semantic_search.py  server.py  setup_helper.py  utils.py
src/zotero_mcp/tools/: __init__.py  _helpers.py  annotations.py  retrieval.py  search.py  write.py
tests/: conftest.py  test_area_annotations.py  test_local_db.py  test_relations_field.py  test_search_by_citation_key.py  test_search_improvements.py  test_semantic_search_quality.py  test_semantic_stats.py  test_server_advanced_search.py  test_server_create_note.py  test_server_get_annotations.py  test_server_notes_and_tags.py  test_shared_helpers.py  test_token_optimization.py  test_update_item.py
