[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-mcp-server"
dynamic = ["version"]
authors = [
  { name = "54yyyu", email = "54yyyu@github.com" },
]
description = "A Model Context Protocol server for Zotero"
keywords = ["zotero", "mcp", "model-context-protocol", "research", "citations", "bibliography"]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyzotero>=1.6.0",
    "mcp>=1.2.0",
    "python-dotenv>=1.0.0",
    "markitdown[pdf]",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "fastmcp>=2.14.0",
    "unidecode>=1.3.0",
]

[project.optional-dependencies]
semantic = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "google-genai>=0.7.0",
    "tiktoken>=0.7.0",
]
pdf = [
    "pymupdf>=1.24.0",
    "ebooklib>=0.18",
]
scite = [
    "requests>=2.28.0",
]
all = [
    "zotero-mcp-server[semantic,pdf,scite]",
]
dev = [
    "zotero-mcp-server[all]",
    "pytest>=7.0.0",
    "ruff>=0.9.0",
]

[project.urls]
"Homepage" = "https://github.com/54yyyu/zotero-mcp"
"Bug Tracker" = "https://github.com/54yyyu/zotero-mcp/issues"
"Documentation" = "https://stevenyuyy.com/zotero-mcp/"
"Changelog" = "https://github.com/54yyyu/zotero-mcp/blob/main/CHANGELOG.md"

[project.scripts]
zotero-mcp = "zotero_mcp.cli:main"

[tool.hatch.version]
path = "src/zotero_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
